# segmenter

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  segmenter.c
